20260126
*Fix behavior of `pkg_replace -V`

20260123
*Improved execution speed using cache files `make -V FLAVORS`

20260121
*Fix typo
*Cleanup code
*Use md5 hashes as cache file names
*Renamed options:
 "--cleandeps" and "--no-cleandeps" have been renamed by "--updatedb" and
 "--no-updatedb", respectively.
*Add option:
 "--cleandb" option clean files in the PKG_REPLACE_DB_DIR.

20260120
*Cleanup code
*Save pkgname cache files in PKG_REPLACE_DB_DIR

20260119
*Improved execution speed using cache files
*Changed the default temporary directory to /tmp

20260115
*Fix typo
*Fix issue with --batch mode
Thanks Dmitry!

20240819
*Improved handling of moved ports.

20240728
*Improved man page.

20240611
*Fix error message in get_strict_depend_pkgs().
*Cleanup codes.

20240603
*Changed File format created by option "-dd" or "-RR" in the PKG_REPLACE_DB_DIR,
 i.e. from PKGNAME to PKGORIGIN, because it is expected to behave better when
 the ports are updates.
*Cleanup codes.
*Improved man page.

20240601
*Changed the default behavior of the PKG_REPLACE_DB_DIR with option
 "-dd" or "-RR". Created files are not deleted but retained.
 If you want to clean the PKG_REPLACE_DB_DIR, set option "--cleandeps".
*The default location of the PKG_REPLACE_DB_DIR has changed from
 /var/tmp/pkg_replace to /var/db/pkg_replace.
*Add option "--makedb". Create files only in the PKG_REPLACE_DB_DIR.
*Cleanup codes.

20240530
*Rename option "--no-conf" -> "--no-configfile".

20240526
*Cleanup options.
 Add "--no-verbose", "--no-config", and "--no-force-config", etc.

20240525
*Improved the summary message.

20240518
*Add "-X" option.
 Remove the libraries in PKGCOMPATDIR, when the specified packages have the
 libraries with the same name as the one in PKGCOMPATDIR. This may be useful
 when there are errors due to a mixture of old and new libraries.
 See pkg_replace(1).
*Improved the summary message.
*Cleanup codes.

20140516
*Cleanup codes.

20240514