@@ -1,3 +1,6 @@
+20260127
+*Changed the behavior of get_pkgname_from_portdir() to detect updated ports
+
 20260126
 *Fix behavior of `pkg_replace -V`
 
